syntax = "proto3";

package users;

option go_package = "github.com/softtacos/trulioo-auth/users/v1";

service UsersService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message User {
  string uuid = 1;
  string email = 2;
}

message CreateUserRequest {
  string email = 1;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string email = 1;
}

message GetUserResponse {
  User user = 1;
}